Fixed dropdown overlap

--- a/Ascenda/css/style.css
+++ b/Ascenda/css/style.css
@@ -184,12 +184,17 @@ pre {
   overflow-y: auto;
   opacity: 0;
   pointer-events: none;
+  position: absolute;
 }
 
 .search-input.active .autocom-box {
   padding: 10px 8px;
   opacity: 1;
   pointer-events: auto;
+  background: #fff;
+  border-radius: 0 0 5px 5px;
+  width: 100%;
+  box-shadow: 0px 2px 3px 1px rgba(0, 0, 0, 0.1);
   /* box-shadow: 0px 1px 5px 3px rgba(0, 0, 0, 0.12); */
 }
 
